# pet-protect-backend

./: .cruft.json  .cz.toml  .gitignore  .mypy.ini  .pre-commit-config.yaml  Justfile  README.md  arion-compose.nix  flake.nix  mkdocs.yml  pyproject.toml  ruff.toml  tox.ini
.github/: settings.yml
migrations/: env.py  script.py.mako
migrations/versions/: dbe70d4da47f_.py
nix/: ci.nix  dev.nix
pet_protect_backend/: __init__.py  app.py  config.py  conn.py
pet_protect_backend/graphql/: __init__.py  _schema.py
pet_protect_backend/graphql/types/: __init__.py  _animal.py  _organization.py
pet_protect_backend/models/: __init__.py  _animal.py  _organization.py  animal.py  organization.py
pet_protect_backend/routers/: graphql.py
tests/: conftest.py  test_config.py  test_conn.py  test_packaging_attribute.py
tests/graphql/queries/: test_animals.py  test_organizations.py
tests/models/: test_animal.py  test_organization.py
