[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pet-protect-backend"
description = "Backend for the Pet Protect project"
version = "0.0.0"
authors = [{name = "Clément Dubos", email = "contact@cdubos.fr"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "fastapi>=0.114.2",
    "alembic>=1.13.2",
    "sqlmodel>=0.0.22",
    "strawberry-graphql[fastapi]>=0.240.4",
    "psycopg[binary]>=3.2.1",
    "environs>=11.0.0",
]

[project.optional-dependencies]
typing = ["mypy"]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.flit.module]
name = "pet_protect_backend"

[tool.pdm]
distribution = false
