[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pet-protect-backend"
description = "Backend for the Pet Protect project"
version = "0.0.0"
authors = [{name = "Clément Dubos", email = "contact@cdubos.fr"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "fastapi>=0.112.0",
    "alembic>=1.13.0",
    "sqlmodel>=0.0.22",
    "strawberry-graphql[fastapi]>=0.237.0",
    "psycopg[binary]>=3.2.0",
    "environs>=11.0.0",
]

[project.optional-dependencies]
typing = ["mypy"]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
    "pytest-alembic>=0.11.1",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.flit.module]
name = "pet_protect_backend"

[tool.pdm]
distribution = true
