[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pet-protect-backend"
description = "Backend for the Pet Protect project."
version = "0.0.0"
authors = [{name = "Clément Dubos", email = "contact@cdubos.fr"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "fastapi>=0.112.0",
    "alembic>=1.13.0",
    "sqlmodel>=0.0.22",
    "strawberry-graphql[fastapi]>=0.237.0",
    "psycopg[binary]>=3.2.0",
    "environs>=11.0.0",
]

[project.optional-dependencies]
typing = ["mypy"]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
    "pytest-alembic>=0.11.1",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.flit.module]
name = "pet_protect_backend"

[tool.pdm]
distribution = true

[tool.ruff]
fix = true
line-length = 100
preview = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Warning
    "W",
    # Mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-annotations
    "ANN",
    # bandit
    "S",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-future-annotations
    "FA",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # tryceratops
    "TRY",
    # FastApi
    "FAST",
]
ignore = ["ANN101", "D203", "D212", "D213"]

[tool.ruff.lint.per-file-ignores]
"migrations/**.py" = ["D103"]
"tests/**.py" = ["D", "S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
preview = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "pet_protect_backend/__init__.py"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
